# countdown

./: countdown.desktop.in  meson.build
data/themes/: countdown.edc  meson.build  perms.sh
data/themes/sounds/: meson.build
src/: config.c  countdown.h  main.c  meson.build
